# snake

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  application.cpp  application.h  game-state.cpp  main.cpp  menu-state.cpp  state.h
src/game/: coord.h  food.cpp  food.h  snake.cpp  world.cpp  world.h
src/game_world/: CMakeLists.txt  food.cpp  snake.cpp  snake.h  world.cpp  world.h
src/log/: CMakeLists.txt  log.cpp  log.h
src/state/: game-state.cpp  menu-state.cpp  pause-state.cpp
